<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:orientation="vertical">

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/cards_spinner"
        android:layout_gravity="center_horizontal"/>

    <com.mobivery.android.widgets.ExLabel
        android:id="@+id/card_number_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/loading_text"/>

    <com.mobivery.android.widgets.ExLabel
        android:id="@+id/card_status_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/card_status" />

    <com.mobivery.android.widgets.ExLabel
        android:id="@+id/card_type_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/card_type" />

    <com.mobivery.android.widgets.ExLabel
        android:id="@+id/card_credit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/card_credit" />

</LinearLayout>