<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/card_detail_upper_half_shape"
        android:padding="10dp">

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/cards_spinner"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="-5dp"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@+id/favorite_card_cb"/>

        <CheckBox
            android:id="@+id/favorite_card_cb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:button="@drawable/card_favorite_selector"/>

        <RelativeLayout
            android:id="@+id/cards_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/cards_spinner"
            android:visibility="gone"
            tools:visibility="visible">


            <com.mobivery.android.widgets.ExLabel
                android:id="@+id/card_type_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="@string/card_type"
                android:gravity="center_horizontal"
                style="@style/CardText.Tussam"
                android:layout_marginLeft="5dp"
                android:maxLines="2"
                android:padding="5dp"
                android:textAllCaps="true"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.3dp"
                android:layout_below="@id/card_type_text"
                android:background="@color/common_text_color" />

            <com.mobivery.android.widgets.ExLabel
                android:id="@+id/card_name_text"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:hint="@string/card_name_hint"
                android:layout_alignParentLeft="true"
                android:gravity="left|center_vertical"
                android:layout_below="@id/card_type_text"
                android:textSize="17sp"
                style="@style/CardText.Tussam" />

            <com.mobivery.android.widgets.ExLabel
                android:id="@+id/card_number_text"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:hint="@string/card_number_hint"
                android:layout_below="@+id/card_name_text"
                android:layout_toLeftOf="@+id/card_credit_text"
                android:gravity="left|center_vertical"
                android:textSize="17sp"
                style="@style/CardText.Tussam" />

            <com.mobivery.android.widgets.ExLabel
                android:id="@+id/card_status_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="@string/card_status"
                android:layout_below="@+id/card_number_text"
                android:gravity="center_vertical"
                android:maxLines="2"
                android:ellipsize="end"
                android:layout_toLeftOf="@+id/card_credit_text"
                style="@style/CardText.Tussam"
                app:fontName="Roboto-Bold"
                android:layout_marginTop="5dp" />


            <com.mobivery.android.widgets.ExLabel
                android:id="@+id/card_credit_text"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                tools:text="@string/card_credit"
                android:layout_alignParentRight="true"
                android:gravity="right|center_vertical"
                android:layout_below="@id/card_type_text"
                android:textSize="26sp"
                style="@style/CardText.Tussam"
                android:layout_alignBottom="@id/card_status_text" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/cards_edit_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/cards_spinner"
            android:visibility="gone"
            tools:visibility="gone">

            <com.mobivery.android.widgets.ExText
                android:id="@+id/card_edit_name_text"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                tools:text="Tarjeta normal"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:gravity="left|center_vertical"
                android:textSize="17sp"
                android:textColorHint="@color/card_detail_text_color"
                style="@style/CardText.Tussam"
                android:hint="@string/card_name_hint"
                android:maxLength="25"
                android:singleLine="true"
                android:imeOptions="actionNext"/>

            <com.mobivery.android.widgets.ExText
                android:id="@+id/card_edit_number_text"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                tools:text="#### #### ####"
                android:maxLength="15"
                android:layout_below="@id/card_edit_name_text"
                android:gravity="center_vertical"
                android:textSize="17sp"
                android:textColorHint="@color/card_detail_text_color"
                style="@style/CardText.Tussam"
                android:hint="@string/card_number_hint"
                android:inputType="number"
                android:imeOptions="actionDone"
                android:singleLine="true"/>


        </RelativeLayout>


    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@color/card_detail_text_color" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/card_detail_lower_half_shape"
        android:padding="10dp">

        <LinearLayout
            android:id="@+id/progress_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="left"
            android:layout_marginRight="5dp">
            <ProgressBar
                android:layout_width="30dp"
                android:layout_height="30dp" />
        </LinearLayout>

        <com.mobivery.android.widgets.ExLabel
            android:id="@+id/card_last_update_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            tools:text="Última actualización:\n15/04/2014"
            android:layout_toRightOf="@+id/progress_view"
            style="@style/CardText.Tussam"
            app:fontName="Roboto-Light"
            android:textSize="12sp"/>

        <LinearLayout
            android:id="@+id/card_actions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:visibility="gone"
            tools:visibility="visible">

            <ImageView
                android:id="@+id/recharge_card_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_action_add_credit"
                style="@style/CardActions.Tussam"/>

            <ImageView
                android:id="@+id/edit_card_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_action_edit"
                style="@style/CardActions.Tussam" />


            <ImageView
                android:id="@+id/refresh_card_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_action_refresh"
                style="@style/CardActions.Tussam" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/card_edit_actions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:visibility="gone"
            tools:visibility="gone">

            <ImageView
                android:id="@+id/discard_card_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_action_discard"
                style="@style/CardActions.Tussam" />

            <ImageView
                android:id="@+id/save_card_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_action_save"
                style="@style/CardActions.Tussam" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/card_new_actions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:visibility="gone"
            tools:visibility="gone">

            <ImageView
                android:id="@+id/remove_card_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_action_remove"
                style="@style/CardActions.Tussam" />

            <ImageView
                android:id="@+id/done_card_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_action_accept"
                style="@style/CardActions.Tussam" />

        </LinearLayout>


    </RelativeLayout>

</LinearLayout>