<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="30dp"
    android:paddingBottom="20dp"
    android:paddingRight="10dp"
    android:paddingLeft="10dp"
    android:background="@color/common_background">

    <RelativeLayout
        android:layout_marginTop="30dp"
        android:id="@+id/card_info_part"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/card_detail_upper_half_shape"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="20dp"
        android:paddingTop="30dp">


        <com.mobivery.android.widgets.ExLabel
            android:id="@+id/card_credit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="14,20€"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:textSize="@dimen/font_size_huge"
            style="@style/HighlightCardText.Tussam"
            android:layout_marginRight="16dp"/>

        <ImageView
            android:id="@+id/minicard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/minicard"
            android:layout_alignTop="@+id/cards_spinner"
            android:layout_alignBottom="@+id/cards_spinner" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/cards_spinner"
            android:layout_gravity="center_horizontal"
            android:layout_alignParentTop="true"
            android:textSize="@dimen/font_size_huge"
            android:layout_toRightOf="@+id/minicard"
            android:layout_marginRight="70dp"
            android:layout_marginBottom="20dp"
            tools:text="Clo"/>

        <RelativeLayout
            android:id="@+id/cards_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/cards_spinner"
            android:visibility="gone"
            tools:visibility="visible">

            <com.mobivery.android.widgets.ExLabel
                android:id="@+id/card_number_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/card_number_hint"
                android:textSize="@dimen/font_size_normal"
                style="@style/CardText.Tussam"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="42dp"
                android:layout_marginRight="100dp"
                android:textStyle="bold"/>


            <com.mobivery.android.widgets.ExLabel
                android:id="@+id/card_type_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="@string/card_type"
                android:layout_below="@+id/card_number_text"
                android:gravity="left"
                style="@style/CardText.Tussam"
                android:maxLines="2"
                android:padding="5dp"
                android:layout_marginLeft="36dp"
                android:layout_marginRight="100dp"
                android:textSize="@dimen/font_size_small"/>


            <com.mobivery.android.widgets.ExLabel
                android:id="@+id/card_status_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="@string/card_status"
                android:layout_below="@+id/card_type_text"
                android:gravity="center_vertical"
                android:maxLines="2"
                android:ellipsize="end"
                style="@style/CardText.Tussam"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="36dp"
                android:textSize="@dimen/font_size_big"/>


            <com.mobivery.android.widgets.ExLabel
                android:id="@+id/card_name_text"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:hint="@string/card_name_hint"
                android:layout_alignParentLeft="true"
                android:gravity="left|center_vertical"
                android:layout_below="@id/card_type_text"
                android:textSize="17sp"
                style="@style/CardText.Tussam"
                android:visibility="gone"/>





        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/cards_edit_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/cards_spinner"
            android:visibility="gone"
            tools:visibility="gone">

            <com.mobivery.android.widgets.ExText
                android:id="@+id/card_edit_name_text"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                tools:text="Tarjeta normal"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:gravity="left|center_vertical"
                android:textSize="17sp"
                android:textColorHint="@color/card_detail_text_color"
                style="@style/CardText.Tussam"
                android:hint="@string/card_name_hint"
                android:maxLength="25"
                android:singleLine="true"
                android:imeOptions="actionNext" />

            <com.mobivery.android.widgets.ExText
                android:id="@+id/card_edit_number_text"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                tools:text="#### #### ####"
                android:maxLength="15"
                android:layout_below="@id/card_edit_name_text"
                android:gravity="center_vertical"
                android:textSize="17sp"
                android:textColorHint="@color/card_detail_text_color"
                style="@style/CardText.Tussam"
                android:hint="@string/card_number_hint"
                android:inputType="number"
                android:imeOptions="actionDone"
                android:singleLine="true" />


        </RelativeLayout>


    </RelativeLayout>

    <View
        android:id="@+id/separator"
        android:layout_below="@+id/card_info_part"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@color/card_detail_text_color" />

    <RelativeLayout
        android:layout_below="@+id/separator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/card_detail_lower_half_shape"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:paddingRight="10dp"
        android:paddingLeft="10dp">

        <LinearLayout
            android:id="@+id/progress_view"
            android:layout_width="@dimen/icons_size"
            android:layout_height="@dimen/icons_size"
            android:orientation="horizontal"
            android:gravity="left"
            android:layout_marginRight="5dp">

            <ProgressBar
                android:layout_width="@dimen/icons_size"
                android:layout_height="@dimen/icons_size" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/time_view"
            android:layout_width="@dimen/icons_size"
            android:layout_height="@dimen/icons_size"
            android:orientation="horizontal"
            android:gravity="left"
            android:layout_marginRight="5dp">

            <ImageView
                android:src="@drawable/ic_action_time"
                android:layout_width="@dimen/icons_size"
                android:layout_height="@dimen/icons_size"/>

        </LinearLayout>

        <com.mobivery.android.widgets.ExLabel
            android:id="@+id/card_last_update_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            tools:text="Última actualización:\n15/04/2014"
            android:layout_toRightOf="@+id/time_view"
            style="@style/CardText.Tussam"
            android:textSize="@dimen/font_size_small"/>

        <LinearLayout
            android:id="@+id/card_actions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:visibility="gone"
            tools:visibility="visible">

            <ImageView
                android:id="@+id/recharge_card_image"
                android:src="@drawable/ic_action_add_credit"
                style="@style/CardActions.Tussam" />

            <ImageView
                android:id="@+id/edit_card_image"
                android:src="@drawable/ic_action_edit"
                style="@style/CardActions.Tussam" />


            <ImageView
                android:id="@+id/refresh_card_image"
                android:src="@drawable/ic_action_refresh"
                style="@style/CardActions.Tussam" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/card_edit_actions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:visibility="gone"
            tools:visibility="gone">

            <ImageView
                android:id="@+id/discard_card_image"
                android:src="@drawable/ic_action_discard"
                style="@style/CardActions.Tussam" />

            <ImageView
                android:id="@+id/save_card_image"
                android:src="@drawable/ic_action_save"
                style="@style/CardActions.Tussam" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/card_new_actions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:visibility="gone"
            tools:visibility="gone">

            <ImageView
                android:id="@+id/remove_card_image"
                android:src="@drawable/ic_action_remove"
                style="@style/CardActions.Tussam" />

            <ImageView
                android:id="@+id/done_card_image"
                android:src="@drawable/ic_action_accept"
                style="@style/CardActions.Tussam" />

        </LinearLayout>


    </RelativeLayout>

    <LinearLayout style="@style/CircleFavoriteButton.Tussam"
        android:layout_alignParentRight="true">

        <CheckBox
            android:id="@+id/favorite_card_cb"
            android:layout_width="@dimen/icons_small_size"
            android:layout_height="@dimen/icons_small_size"
            android:layout_marginLeft="4dp"
            android:button="@drawable/card_favorite_selector"/>

    </LinearLayout>

    <Button
        android:id="@+id/add_card_button"
        style="@style/CircleButton.Tussam"
        android:text="+"
        android:textSize="@dimen/font_size_huge"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>